--- a/sections/implementacao/docentes.tex
+++ b/sections/implementacao/docentes.tex
@@ -18,5 +18,6 @@ O docente terá ainda acesso a uma barra de navegação que lhe permitirá saber
 \input{sections/implementacao/docentes/entregas}
 % \input{sections/implementacao/docentes/pautas}
  \input{sections/implementacao/docentes/ucs}
+ \input{sections/implementacao/docentes/testes}
  \input{sections/implementacao/docentes/avaliacoes}
 
